// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Atkit > renders as expected in development 1`] = `
<div
  class="atkit"
>
  <nav
    class="navbar navbar-expand-sm navbar-dark bg-dark sticky-top"
  >
    <div
      class="container-fluid"
    >
      <a
        class="active navbar-brand"
        href="#/"
      >
        <img
          alt="atkit logo"
          class="d-inline-block align-top"
          height="30"
          src="/atkit/src/assets/logo.png"
          width="30"
        />
      </a>
      <button
        aria-controls="responsive-navbar-nav"
        aria-label="Toggle navigation"
        class="navbar-toggler collapsed"
        type="button"
      >
        <span
          class="navbar-toggler-icon"
        />
      </button>
      <div
        class="navbar-collapse collapse"
        id="responsive-navbar-nav"
      >
        <div
          class="navbar-nav nav-pills"
        >
          <a
            class="nav-link"
            data-rr-ui-event-key="#/cards"
            href="#/cards"
          >
            Cards
          </a>
          <a
            class="nav-link"
            data-rr-ui-event-key="#/combos"
            href="#/combos"
          >
            Combos
          </a>
          <a
            class="nav-link"
            data-rr-ui-event-key="#/combomap"
            href="#/combomap"
          >
            Combo Map
          </a>
          <a
            class="nav-link"
            data-rr-ui-event-key="#/dumper/cards"
            href="#/dumper/cards"
          >
            Cards Data Dumper
          </a>
          <a
            class="nav-link"
            data-rr-ui-event-key="#/dumper/combos"
            href="#/dumper/combos"
          >
            Combos Data Dumper
          </a>
        </div>
      </div>
    </div>
  </nav>
  <div
    class="mt-3"
  />
  <div
    class="container"
  >
    <div>
      <div
        class="p-5 mb-4 bg-body-tertiary rounded-3"
      >
        <h1
          class="display-5"
        >
          Welcome to atkit!
        </h1>
        <p>
          atkit is a toolkit for
           
          <a
            class="text-decoration-none"
            href="http://www.animationthrowdowngame.com"
          >
            Animation Throwdown: The Quest for Cards
          </a>
           
          game.
        </p>
      </div>
      <div
        class="fade alert alert-info show"
        role="alert"
      >
        <div
          class="alert-heading h4"
        >
          Pardon the mess
        </div>
        <p
          class="mb-0"
        >
          This 
          website
           is still a work in progress.
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Atkit > renders as expected in production 1`] = `
<div
  class="atkit"
>
  <nav
    class="navbar navbar-expand-sm navbar-dark bg-dark sticky-top"
  >
    <div
      class="container-fluid"
    >
      <a
        class="active navbar-brand"
        href="#/"
      >
        <img
          alt="atkit logo"
          class="d-inline-block align-top"
          height="30"
          src="/atkit/src/assets/logo.png"
          width="30"
        />
      </a>
      <button
        aria-controls="responsive-navbar-nav"
        aria-label="Toggle navigation"
        class="navbar-toggler collapsed"
        type="button"
      >
        <span
          class="navbar-toggler-icon"
        />
      </button>
      <div
        class="navbar-collapse collapse"
        id="responsive-navbar-nav"
      >
        <div
          class="navbar-nav nav-pills"
        >
          <a
            class="nav-link"
            data-rr-ui-event-key="#/cards"
            href="#/cards"
          >
            Cards
          </a>
          <a
            class="nav-link"
            data-rr-ui-event-key="#/combos"
            href="#/combos"
          >
            Combos
          </a>
          <a
            class="nav-link"
            data-rr-ui-event-key="#/combomap"
            href="#/combomap"
          >
            Combo Map
          </a>
        </div>
      </div>
    </div>
  </nav>
  <div
    class="mt-3"
  />
  <div
    class="container"
  >
    <div>
      <div
        class="p-5 mb-4 bg-body-tertiary rounded-3"
      >
        <h1
          class="display-5"
        >
          Welcome to atkit!
        </h1>
        <p>
          atkit is a toolkit for
           
          <a
            class="text-decoration-none"
            href="http://www.animationthrowdowngame.com"
          >
            Animation Throwdown: The Quest for Cards
          </a>
           
          game.
        </p>
      </div>
      <div
        class="fade alert alert-info show"
        role="alert"
      >
        <div
          class="alert-heading h4"
        >
          Pardon the mess
        </div>
        <p
          class="mb-0"
        >
          This 
          website
           is still a work in progress.
        </p>
      </div>
    </div>
  </div>
</div>
`;
